curso 23 mes de junio

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 secreto.txt
 HTML/Imagen de WhatsApp 2025-05-07 a las 17.49.52_5eba20c7.jpg
+Ejercicio practico Taller nro 1.py
+Taller nro 1.py
+hola.py
+suma de cedulas.py
